feat: adding missing tests for device types, api response body